atk-adaptor: plug a refcount leak

https://bugzilla.gnome.org/show_bug.cgi?id=679285